--- a/packages/abc/package.json
+++ b/packages/abc/package.json
@@ -1,6 +1,6 @@
 {
   "name": "abc",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -10,7 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "haha": "^0.0.0",
-    "dayjs": "^1.9.6"
+    "dayjs": "^1.9.6",
+    "haha": "^0.1.0"
   }
 }
