--- a/packages/def/package.json
+++ b/packages/def/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "def",
+  "name": "@zhoutest/def",
   "version": "0.1.0",
   "description": "",
   "main": "index.js",
@@ -11,5 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "dayjs": "^1.9.6"
-  }
+  },
+  "gitHead": "1adda1c455d8ffd275e1c6cf0e07cf25e529524a"
 }
