--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "testzhou",
   "version": "1.0.0",
+  "publishConfig": {
+    "access": "public"
+  },
   "dependencies": {
     "webpack": "^4.0"
   },
