--- a/lerna.json
+++ b/lerna.json
@@ -2,5 +2,11 @@
   "packages": [
     "packages/*"
   ],
-  "version": "0.1.7"
+  "version": "0.1.6",
+	"command": {
+		"publish": {
+			"message": "chore(release): publish",
+			"registry": "https://registry.npmjs.org/"
+		}
+	}
 }
